k8s/config-server.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: config
  namespace: ewallet
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: config
    spec:
      containers:
        - name: config
          image: gcr.io/sop-ewallet/config:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8888
          resources:
            limits:
              cpu: 1000m
              memory: 512Mi
            requests:
              cpu: 250m
              memory: 256Mi
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
---
apiVersion: v1
kind: Service
metadata:
  name: config
  namespace: ewallet
spec:
  type: NodePort
  ports:
    - port: 8888
      targetPort: 8888
      name: http
  selector:
    app: config
