k8s/eureka.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: eureka
  namespace: ewallet
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: eureka
    spec:
      containers:
        - name: eureka
          image: gcr.io/sop-ewallet/eureka:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8761
          resources:
            limits:
              cpu: 1000m
              memory: 512Mi
            requests:
              cpu: 250m
              memory: 256Mi
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
---
apiVersion: v1
kind: Service
metadata:
  name: eureka
  namespace: ewallet
spec:
  type: NodePort
  ports:
    - port: 8761
      targetPort: 8761
      name: http
  selector:
    app: eureka
