k8s/exchange.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: exchange
  namespace: ewallet
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: exchange
    spec:
      containers:
        - name: exchange
          image: gcr.io/sop-ewallet/currency_exchange:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          resources:
            limits:
              cpu: 500m
              memory: 256Mi
            requests:
              cpu: 150m
              memory: 64Mi
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
---
apiVersion: v1
kind: Service
metadata:
  name: exchange
  namespace: ewallet
spec:
  type: NodePort
  ports:
    - port: 3000
      targetPort: 3000
      name: http
  selector:
    app: exchange
