k8s/frontend.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: frontend
  namespace: ewallet
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: gcr.io/sop-ewallet/frontend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          resources:
            limits:
              cpu: 1000m
              memory: 256Mi
            requests:
              cpu: 150m
              memory: 64Mi
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: ewallet
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
      name: http
  selector:
    app: frontend
