k8s/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: ewallet
spec:
  type: NodePort
  ports:
    - port: 5432
      targetPort: 5432
      name: postgresql
  selector:
    app: postgresql
    release: postgres
    role: master
