k8s/transactions.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: transactions
  namespace: ewallet
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: transactions
    spec:
      containers:
        - name: transactions
          image: gcr.io/sop-ewallet/transactions:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            limits:
              cpu: 1000m
              memory: 512Mi
            requests:
              cpu: 250m
              memory: 256Mi
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
---
apiVersion: v1
kind: Service
metadata:
  name: transactions
  namespace: ewallet
spec:
  type: NodePort
  ports:
    - port: 8080
      targetPort: 8080
      name: http
  selector:
    app: transactions
