k8s/zuul.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: zuul
  namespace: ewallet
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: zuul
    spec:
      containers:
        - name: zuul
          image: gcr.io/sop-ewallet/zuul:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 9090
          resources:
            limits:
              cpu: 1000m
              memory: 512Mi
            requests:
              cpu: 250m
              memory: 256Mi
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
---
apiVersion: v1
kind: Service
metadata:
  name: zuul
  namespace: ewallet
spec:
  type: NodePort
  ports:
    - port: 9090
      targetPort: 9090
      name: http
  selector:
    app: zuul
