k8s/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress
  namespace: ewallet
  annotations:
    kubernetes.io/ingress.class: nginx
    certmanager.k8s.io/cluster-issuer: letsencrypt
spec:
  tls:
    - hosts:
        - sop.wiput.me
      secretName: cert
  rules:
    - host: sop.wiput.me
      http:
        paths:
          - path: /
            backend:
              serviceName: zuul
              servicePort: 9090
